--- a/calcstyle.css
+++ b/calcstyle.css
@@ -32,6 +32,11 @@ body {
   font-size: 2rem;
   text-align: center;
 }
+.display.warning {
+  color: orange !important;
+  font-size: 1.2rem;
+  text-align: center;
+}
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
